--- a/css/homepage.css
+++ b/css/homepage.css
@@ -2,6 +2,7 @@
 
 @import'main_styles.css';
 @import'main_layout.css';
+@import'fonts.css';
 
 
   .content{
@@ -19,6 +20,7 @@ padding:0.15rem;
 
 blockquote p::before{content:'\201C'}
 blockquote p::after{content:'\201D'}
+blockquote header{background:none;}
 
 #cards_section{
   grid-area:thumbnail;
